--- a/public/themes/JLT_JerryLee_1.0/header.ejs
+++ b/public/themes/JLT_JerryLee_1.0/header.ejs
@@ -12,10 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="">
-    <meta property="wb:webmaster" content="498f09241e7b617f" />
 
-    <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+    <link rel="stylesheet" type="text/css" href="/themes/<%= settings.theme%>/stylesheets/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/themes/<%= settings.theme%>/stylesheets/style.css" />
    <!--  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400" /> -->
 </head>
 <body>
