--- a/public/themes/dashboard/dash_footer.ejs
+++ b/public/themes/dashboard/dash_footer.ejs
@@ -2,9 +2,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="/javascripts/jquery.fitvids.js"></script>
-    <script type="text/javascript" src="/javascripts/index.js"></script>
-    <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/themes/dashboard/javascripts/jquery.fitvids.js"></script>
+    <script type="text/javascript" src="/themes/dashboard/javascripts/index.js"></script>
+    <script type="text/javascript" src="/themes/dashboard/javascripts/bootstrap.min.js"></script>
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="../../assets/js/docs.min.js"></script>-->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
