--- a/public/themes/dashboard/settings.ejs
+++ b/public/themes/dashboard/settings.ejs
@@ -12,10 +12,23 @@
             </div>
             </fieldset>
             <input type="hidden" id="starttime" name="starttime" value="<%= settings.starttime%>">
+              <div class="form-group">
+                  <label for="themes" class="col-sm-2 control-label">选择主题</label>
+                  <div class="col-sm-10">
+                      <select class="form-control" id="themes" name="themes">
+                          <% themes.forEach(function(theme, index){%>
+                              <%if (settings.theme == theme){%>
+                                <option selected="true" value="<%= theme%>"><%= theme%></option>
+                              <% }else{ %>
+                                <option value="<%= theme%>"><%=theme%></option>
+                              <% }%>
+                          <% })%>
+                      </select>
+                  </div>
+              </div>
             <div class="form-group">
               <label for="limit" class="col-sm-2 control-label">每页显示文章数</label>
               <div class="col-sm-10">
-                <!-- <input type="text" class="form-control" id="limit" name="limit" > -->
                 <select class="form-control" id="limit" name="limit">
                   <% for(var i=5;i<=10;i++) {%>
                     <% if (settings.limit){%>
@@ -34,7 +47,7 @@
               <div class="form-group">
                   <label for="blogname" class="col-sm-2 control-label">博客名称</label>
                   <div class="col-sm-10">
-                      <input type="text" class="form-control" id="blogname" value="<%= settings.blogname%>">
+                      <input type="text" class="form-control" id="blogname" name="blogname" value="<%= settings.blogname%>">
                   </div>
               </div>
             <div class="form-group">
