--- a/public/themes/dashboard/edit_post.ejs
+++ b/public/themes/dashboard/edit_post.ejs
@@ -1,9 +1,9 @@
         <%- include dash_header %>
          <!-- 文件上传依赖js -->
-        <script type="text/javascript" src="/javascripts/jquery.ui.widget.js"></script>
-        <script type="text/javascript" src="/javascripts/jquery.iframe-transport.js"></script>
-        <script type="text/javascript" src="/javascripts/jquery.fileupload.js"></script>
-        <script type="text/javascript" src="/javascripts/upload.js"></script>
+        <script type="text/javascript" src="/themes/dashboard/javascripts/jquery.ui.widget.js"></script>
+        <script type="text/javascript" src="/themes/dashboard/javascripts/jquery.iframe-transport.js"></script>
+        <script type="text/javascript" src="/themes/dashboard/javascripts/jquery.fileupload.js"></script>
+        <script type="text/javascript" src="/themes/dashboard/javascripts/upload.js"></script>
 
         <script type="text/javascript">
           function edit(draft){
