--- a/public/themes/dashboard/dash_header.ejs
+++ b/public/themes/dashboard/dash_header.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="/themes/dashboard/stylesheets/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/themes/dashboard/stylesheets/dash_style.css" />
 
-    <script type="text/javascript" src="/javascripts/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="/themes/dashboard/javascripts/jquery-1.11.1.min.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
