update to mongoose

--- a/public/themes/JLT_JerryLee_1.0/index.ejs
+++ b/public/themes/JLT_JerryLee_1.0/index.ejs
@@ -12,7 +12,7 @@
       <!-- 导航结束 -->
       <div class="inner cover">
         <h1 style="font-size:500%">{ }</h1>
-        <h1 class="cover-heading">Coder & Geek</h1>
+        <h1 class="cover-heading"><%= settings.blogname%></h1>
         <p class="lead intro"><%= settings.intro%></p>
 
       </div>
