--- a/public/themes/JLT_JerryLee_1.0/header.ejs
+++ b/public/themes/JLT_JerryLee_1.0/header.ejs
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" type="text/css" href="/themes/<%= settings.theme%>/stylesheets/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/themes/<%= settings.theme%>/stylesheets/style.css" />
+    <script type="text/javascript" src="/themes/<%= settings.theme%>/javascripts/jquery-1.11.1.min.js"></script>
    <!--  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400" /> -->
 </head>
 <body>
