--- a/public/themes/JLT_JerryLee_1.0/post.ejs
+++ b/public/themes/JLT_JerryLee_1.0/post.ejs
@@ -1,5 +1,36 @@
 <%- include header %>
+<link rel="stylesheet" type="text/css" href="/themes/<%= settings.theme%>/stylesheets/lightbox.css" />
+<script type="text/javascript" src="/themes/<%= settings.theme%>/javascripts/lightbox.min.js"></script>
+<script language="JavaScript">
+    window.onload = function(){
+        $('a').each(function(){
+            if($(this).find('img').size()!=0){
+                $(this).attr('data-lightbox','<%= post.pinyin%>');
+                $(this).attr('data-title','<%= post.title%>');
+            }
+        });
+    }
 
+    function comment() {
+        if ($('#name').val() == ''){
+            alert('壮士，请留下姓名！');
+        }else if($('#content').val() == ''){
+            alert('你到底想说什么？');
+        }else{
+            $.post('http://localhost:3000/comment/<%= post.pinyin%>',$('#comment-form').serialize(),function(data) {
+                if(data=='noname') {
+                    alert('');
+                }else if(data=='nocontent') {
+                    alert('');
+                }else if(data){
+                    alert('评论成功！');
+                    location.reload();
+                }
+            })
+        }
+    }
+
+</script>
 <div class="site-wrapper">
 
     <div class="site-wrapper-inner" style="display:block;">
@@ -58,6 +89,35 @@
                         <div class="blog-post" style="font-size:13px;color:#aaa;">
                             <%- post.post %>
                         </div>
+                        <br>
+                        <form id="comment-form" role="form" method="post" action="/comment/<%= post.pinyin%>">
+                            <hr style="border-top:1px solid #444">
+                            <div class="form-group">
+                                <label for="name">评论：</label>
+                                <div class="col-sm-13">
+                                    <input type="text" class="form-control comment-box" id="name" name="name" placeholder="昵称"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-13">
+                                    <textarea class="form-control comment-box" id="content" name="content" rows="5" placeholder="留言仅支持纯文本..."></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <input type="button" class="visible-md visible-lg comment-save btn btn-primary pull-right" onclick="comment();notempty();" value="发 表"/>
+                                <input type="submit" class="visible-sm visible-xs btn btn-primary pull-right" value="发 表"/>
+                             </div>
+                        </form>
+                        <div class="clearfix"></div>
+                        <%post.comments.forEach(function(comment,index){%>
+                            <div class="media">
+                                <span class="media-object comment-icon pull-left"><%-: comment.name|truncate:1 %></span>
+                                <div class="media-body">
+                                    <h4 class="media-heading"><%=comment.name%> ：<span class="comment-time pull-right"><%= comment.time%></span></h4>
+                                    <p class="comment-content"><%= comment.content%></p>
+                                </div>
+                            </div>
+                        <%})%>
                     </div>
                     <div class="col-sm-2 pull-right" style="padding-left: 30px;">
                         <p><a href="javascript:history.go(-1);">&laquo;返回</a></p>
