--- a/public/themes/JLT_JerryLee_1.0/login.ejs
+++ b/public/themes/JLT_JerryLee_1.0/login.ejs
@@ -7,14 +7,10 @@
       <div class="container" style="width:80%;text-align:left">
 
       <form class="form-signin" role="form" method="post">
-        <h2 class="form-signin-heading">请登录</h2>
+        <h2 class="form-signin-heading">登录 <%= settings.blogname%></h2><br>
         <input name="username" type="text" class="form-control" placeholder="用户名" required autofocus>
         <input name="password" type="password" class="form-control" placeholder="密码" required>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> 记住我
-          </label>
-        </div>
+        <br>
         <input class="btn btn-lg btn-primary btn-block" type="submit" value="登 录"/>
       </form>
 
