--- a/public/themes/dashboard/edit_post.ejs
+++ b/public/themes/dashboard/edit_post.ejs
@@ -10,6 +10,49 @@
             $('#draft').val(draft);
             $('#edit-form').submit();
           }
+
+          function addlink(){
+              if(!$('#urltext').val()||!$('#url').val()||$('#url').val()=="http://"){
+                  clearlink();
+                  alert('输入错误！');
+                  return false;
+              }
+              $('#post').val($('#post').val()+"["+$('#urltext').val()+"]"+"("+$('#url').val()+")");
+              clearlink();
+          }
+
+          function  clearlink(){
+              $('#urltext').val('link');
+              $('#url').val('');
+          }
+
+          function scrollListen(){
+              $('#post').scroll(function(){
+                  $('#preview').scrollTop($('#post').scrollTop());
+              });
+              $('#post').keyup(function(){
+                  $('#preview').scrollTop($('#post').scrollTop());
+              });
+          }
+          function hidePreview(){
+             $('.preview').hide();
+             $('#editor').css('width','100%');
+             $('.show-preview').show();
+             $('.hide-preview').hide();
+          }
+          function showPreview(){
+              $('.preview').show();
+              $('#editor').css('width','50%');
+              $('.hide-preview').show();
+              $('.show-preview').hide();
+          }
+//          function preview(){
+//              var html = '<div class="preview col-sm-9 col-sm-offset-3 col-md-11 col-md-offset-1">'+
+//                            '<p style="margin-top:10px">文章预览：</p>'+
+//                            '<div id="preview" class="wmd-preview"></div>'+
+//                            ' </div>';
+//              $('.navbar').before(html);
+//          }
         </script>
         <div class="col-sm-9 col-sm-offset-3 col-md-11 col-md-offset-1 main">
           <h1 class="page-header">编辑文章</h1>
@@ -18,14 +61,32 @@
             <!-- 添加标签 -->
             <div class="form-group"><input type="text" class="form-control" id="tags" name="tags" placeholder="添加标签，多个用英文逗号隔开" value="<%= post.tags%>"></div>
             <!-- 上传图片 -->
-            <div class="form-group">
-              <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target=".bs-upload-modal-sm">上传图片</button>
-            </div>
+            <!--<div class="form-group">-->
+              <!--<button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target=".bs-upload-modal-sm">上传图片</button>-->
+            <!--</div>-->
             <input type="hidden" class="form-control" id="draft" name="draft" value="<%= post.draft%>" />
             <input type="hidden" class="form-control" id="id" name="id" value="<%= post._id%>" >
             <input type="hidden" class="form-control" id="username" name="username" value="<%= user.username%>" >
-            <div class="form-group"><textarea class="form-control" id="post" name="post" rows="18" ><%= post.post%></textarea></div>
+              <div class="form-group">
+                  <div id="editor">
+                      <div id="toolbar" class="wmd-toolbar"></div>
+                      <textarea id="post" name="post" placeholder="文章正文" class="wmd-input form-control" rows="30" cols="80"><%= post.post%></textarea>
+                      <!--<div id="tools">-->
+                      <!--<button id="highlightCode" class="toolbutton">Highlight Code</button>-->
+                      <!--<button id="selectall" class="toolbutton" onclick="selectAll();">Select all preview text</button>-->
+                      <!--<button id="tohtml" class="toolbutton" onclick="toHtml();">Print</button>-->
+                      <!--&lt;!&ndash; <button id="copyall" class="toolbutton" onclick="copyAll();">Copy to clipboard</button> &ndash;&gt;-->
+                      <!--</div>-->
+                  </div>
+                  <div class="preview hidden-xs hidden-sm" style="display: none">
+                      <p style="margin-top:15px;font-size: 21px">文章预览：</p>
+                      <div id="preview" class="wmd-preview"></div>
+                  </div>
+              </div>
+            <!--<div class="form-group"><textarea class="form-control" id="post" name="post" rows="18" ><%= post.post%></textarea></div>-->
             <div class="form-group">
+              <button type="button" class="show-preview btn btn-success hidden-xs hidden-sm" onclick="showPreview()">文章预览</button>
+              <button type="button" style="display: none" class="hide-preview btn btn-success hidden-xs hidden-sm" onclick="hidePreview()">隐藏预览</button>
               <button type="submit" class="btn btn-warning">编 辑</button>
               <%if (post.draft == 1){%><button type="button" class="btn btn-primary" onclick="edit(0);">发 布</button><% }%>
             </div>
@@ -59,4 +120,55 @@
           </div>
       </div>
     </div>
+    <!-- 添加链接 -->
+    <div class="modal fade bs-addlink-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        <h4 class="modal-title" id="myModalLabel">添加超链接</h4>
+                    </div>
+                    <div class="modal-body" style="padding:-10px;">
+                        <p>
+                            <label for="file">输入URL：</label>
+                            <input id="url" class="form-control" type="text" value=""/><br>
+                            <label for="file">输入显示文字：</label>
+                            <input id="urltext" class="form-control" type="text" value="link"/><br>
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="addlink()">添加至文章</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal" onclick="clearlink()">关 闭</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- jQuery and Syntax Highlight -->
+    <script type="text/javascript" src="/themes/dashboard/javascripts/jquery.syntaxhighlighter.min.js"></script>
+
+    <!-- WMD -->
+    <script type="text/javascript" src="/themes/dashboard/javascripts/showdown.js"></script>
+    <script type="text/javascript" src="/themes/dashboard/javascripts/wmd.js"></script>
+    <!-- jQuery listener for syntax highlight -->
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#highlightCode").click(function(){
+                $.SyntaxHighlighter.init({
+                    'lineNumbers': false,
+                    'debug': true
+                });
+            });
+            new WMD("post", "toolbar", { preview: "preview" });
+
+            $("#url").blur(function(){
+                var old = $(this).val().replace('http://', '');
+                $(this).val('http://'+old);
+            });
+        });
+        scrollListen();
+
+    </script>
+
     <%- include dash_footer %>
