--- a/public/themes/JLT_JerryLee_1.0/header.ejs
+++ b/public/themes/JLT_JerryLee_1.0/header.ejs
@@ -11,7 +11,7 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="">
+    <!--<link rel="shortcut icon" href="">-->
 
     <link rel="stylesheet" type="text/css" href="/themes/<%= settings.theme%>/stylesheets/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/themes/<%= settings.theme%>/stylesheets/style.css" />
