--- a/public/themes/JLT_JerryLee_1.0/post.ejs
+++ b/public/themes/JLT_JerryLee_1.0/post.ejs
@@ -71,7 +71,7 @@
                                         var wb_shareBtn = document.getElementById("shareBtn")
                                         wb_url = document.URL, //获取当前页面地址，也可自定义
                                                 wb_appkey = "",
-                                                wb_title = "【<%= settings.blogname%>】 " + document.title + '（采用jlBox搭建博客）',
+                                                wb_title = "【<%= settings.blogname%>】 " + document.title + '（采用NodePad搭建博客）',
                                                 wb_ralateUid = "",
                                                 wb_pic = "",
                                                 wb_language = "zh_cn";
