--- a/public/themes/JLT_JerryLee_1.0/blog.ejs
+++ b/public/themes/JLT_JerryLee_1.0/blog.ejs
@@ -29,7 +29,7 @@
              <% })%>
           </p>
           <div class="blog-content"><%-: post.post|truncate:340 %>...</div>
-          <small><a href="/blog/post/<%= posts.pinyin%>">展开阅读 &raquo;</a></small>
+          <small><a href="/blog/post/<%= post.pinyin%>">展开阅读 &raquo;</a></small>
           
           <hr style="border-top:1px solid #444">
         <% })%>
