--- a/public/themes/NPT_LingYong_1.0/login_footer.ejs
+++ b/public/themes/NPT_LingYong_1.0/login_footer.ejs
@@ -10,10 +10,10 @@
                 </div>
                 <div class="col-md-12">
                     <ul class="list-inline">
-                        <li> Power By &nbsp;<a href="http://nodejs.org">NodePad</a></li>
-                        <li> Design By &nbsp;<a href="http://lingyong.me">lingyong</a>
+                        <li> Power By &nbsp;<a href="https://github.com/lizhangyuh/NodePad" target="_blank">NodePad</a></li>
+                        <li> Design By &nbsp;<a href="http://lingyong.me" target="_blank">lingyong</a>
                         </li>
-                        <li>&copy; 2014 &nbsp; Modified by&nbsp;<a href="http://jl.geekwall.org">JerryLee</a></li>
+                        <li>&copy; 2014 &nbsp; Modified by&nbsp;<a href="http://jl.geekwall.org" target="_blank">JerryLee</a></li>
                     </ul>
                 </div>
             </div>
