--- a/public/themes/NPT_LingYong_1.0/tags.ejs
+++ b/public/themes/NPT_LingYong_1.0/tags.ejs
@@ -13,7 +13,7 @@
                 <div class="blog"><a href="/blog/post/<%= post.pinyin%>" target="_blank" class="wrap"><h2><%= post.title%></h2>
 
                         <div class="blog-content">
-                            <%-: post.textpost|truncate:100 %>
+                            <%= post.textpost.substring(0,100) %>
                         </div>
                         <div class="comment-box hidden" style="padding: 20% 0;">
                             <%post.tags.forEach(function (tag, index){%>
