--- a/public/themes/NPT_JerryLee_1.0/blog.ejs
+++ b/public/themes/NPT_JerryLee_1.0/blog.ejs
@@ -29,7 +29,7 @@
              <% })%>
               <span class="pull-right"><i class="glyphicon glyphicon-eye-open"></i> <%= post.pv%>&nbsp;&nbsp;&nbsp;<i class="glyphicon glyphicon-comment"></i> <%= post.comments.length%> </span>
           </p>
-          <div class="blog-content"><%-: post.textpost|truncate:340 %>...</div>
+          <div class="blog-content"><%= post.textpost.substring(0,340)%>...</div>
           <small><a href="/blog/post/<%= post.pinyin%>">展开阅读 &raquo;</a></small>
           
           <hr style="border-top:1px solid #444">
